Comply with recent engine changes, fix SplashScreen video playback